# MPlayer

./: CMakeLists.txt  README.md  config.cmake  vendor.cmake
src/: main.cpp
src/utils/: Log.cpp  Log.h
test/: test.cpp  test_google_test.cpp
test/src/ffmpeg/: test_ffmpeg.cpp
test/src/googletest/: test_google_test.cpp
test/src/spdlog/: test_spdlog.cpp
